--- a/wp7-donor/Donor/App.xaml
+++ b/wp7-donor/Donor/App.xaml
@@ -269,8 +269,14 @@
                         <Setter Property="FontSize" Value="24"/>
                         <Setter Property="Foreground" Value="#DF8D4B"/>
         </Style>
-		
-		<Style x:Key="Text36pxDF8D4B" TargetType="TextBlock">
+
+        <Style x:Key="Text24pxB9A194" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Segoe WP"/>
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="Foreground" Value="#B9A194"/>
+        </Style>
+
+        <Style x:Key="Text36pxDF8D4B" TargetType="TextBlock">
                         <Setter Property="FontFamily" Value="Segoe WP"/>
                         <Setter Property="FontSize" Value="36"/>
                         <Setter Property="Foreground" Value="#DF8D4B"/>
