--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -63,19 +63,26 @@
                 </controls:PanoramaItem.Header>
                 <Grid Margin="0,10,0,0">
                     <StackPanel>
-                    	<my:VotesControl x:Name="rate" 
-						HorizontalAlignment="Left"/>
-<StackPanel Orientation="Horizontal">
-<TextBlock TextWrapping="Wrap" Text="Адрес" 			Style="{StaticResource Text36pxB9A194}" Tap="TextBlock_Tap_1" /> 
-<Image Height="50" Source="images/ic_map.png" Stretch="Fill" Width="50" Tap="Image_Tap" />
-</StackPanel>              
+                    	<my:VotesControl x:Name="rate" HorizontalAlignment="Left"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock TextWrapping="Wrap" Text="Адрес" Style="{StaticResource Text36pxB9A194}" Tap="TextBlock_Tap_1"/>
+                            <Border Width="50" Height="50" BorderThickness="3" Tap="Image_Tap">
+                                <Border.BorderBrush>
+                                    <SolidColorBrush />
+                                </Border.BorderBrush>
+                                <Border.Background>
+                                    <SolidColorBrush />
+                                </Border.Background>
+                                <Image Height="50" Source="images/ic_map.png" Stretch="None" Width="50" Tap="Image_Tap"/>
+                            </Border>
+                        </StackPanel>              
                         
-<TextBlock TextWrapping="Wrap" 
-Text="{Binding Adress}"	Style="{StaticResource Text24pxDF8D4B}"/>
-<TextBlock TextWrapping="Wrap" 	Text="Телефон" 
-Style="{StaticResource Text36pxB9A194}"/>
+                        <TextBlock TextWrapping="Wrap" 
+                        Text="{Binding Adress}"	Style="{StaticResource Text24pxDF8D4B}"/>
+                        <TextBlock TextWrapping="Wrap" 	Text="Телефон" 
+                        Style="{StaticResource Text36pxB9A194}"/>
                         
-<TextBlock TextWrapping="Wrap" 
+                        <TextBlock TextWrapping="Wrap" 
 						Text="{Binding Phone}"
 						Style="{StaticResource Text24pxDF8D4B}"/>
                         <TextBlock 
