--- a/wp7-donor/Donor/EventPage.xaml
+++ b/wp7-donor/Donor/EventPage.xaml
@@ -102,11 +102,11 @@
 					Text="{Binding Path=Reminder}" 
 					Name="Reminder" TextWrapping="Wrap"/>
 
-                            <TextBlock Style="{StaticResource Text24pxDF8D4B}" Text="Узнать результат" Grid.Column="0" Grid.Row="1" />
+                            <!--<TextBlock Style="{StaticResource Text24pxDF8D4B}" Text="Узнать результат" Grid.Column="0" Grid.Row="1" />
                             <TextBlock 
 					Style="{StaticResource Text24pxC0A89A}" Grid.Column="1" Grid.Row="1"
 					Text="{Binding Path=Reminder}" 
-					TextWrapping="Wrap"/>
+					TextWrapping="Wrap"/>-->
                         </Grid>
                             
                     </StackPanel>
